IASC-149: fixed contact title image wrap issue
Former-commit-id: 0890e6019f4405ef61f25efc77020a728f915c23

--- a/src/themes/iasc/assets/sass/components/_node.scss
+++ b/src/themes/iasc/assets/sass/components/_node.scss
@@ -67,9 +67,14 @@
     float: left;
     margin-right: 20px;
   }
+
   .text {
     position: relative;
     overflow: hidden;
+  }
+
+  .views-field-field-position {
+    overflow: auto;
   }
 }
 
